2013-12-13 Fixed problem with centering the mismatch mark in memo game
2013-12-11 Fixed problem with restoring state from same lesson but other source
2013-12-11 Close popup while changing page
2013-12-11 Fixed problem with navigation toolbars position
2013-12-10 Fixed problem with page numbers in Table Of Contents addon
2013-12-10 Fixed problem with counting errors and sending events on setState, setShowErrorsMode and setWorkMode in Hangman addon
2013-12-10 Fixed problem with navigation toolbars and report module
2013-12-09 Removed reaction on Reset in Check Counter module
2013-12-09 Removed console.logs in Double State Button
2013-12-09 Fixed problem with drawRange function in Line Number addon
2013-12-09 Fixed problem with Audio addon on iPads with getState function and AC scripts
2013-12-06 Fixed problem with rendering mathjax in text module while loading state
2013-12-05 Fixed problem with selecting Paragraph addon in the editor
2013-12-05 Fixed problem with low height Paragraph addon
2013-12-04 Fixed issue with marking points as wrong in free points mode
2013-12-04 Added Custom CSS property to Paragraph addon
2013-12-04 Fixed issue with points on axis after 'check' in LineNumber addon
2013-12-03 Blockage displaying page navigation's arrows after clicking on the ExternalLinkButton
2013-12-02 Added drop event handler for gaps in Text module
2013-11-29 Fixed problem with errors counting in Memo Game addon
2013-11-27 Fixed problem with showing choice after reset
2013-11-22 New commands in module choice: show, hide, reset
2013-11-22 Fixed problem with initial setState in Paragraph addon
2013-11-20 Fixed problem with Source list not activity mode
2013-11-20 Source list can contain formatted text
2013-11-19 Fixed issue with Text Selection addon
2013-11-18 Fixed issue with axis custom values in Plot addon
2013-11-18 Added stop propagation on event click in Double State Button module.